# 18th-Moordule

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  page-desidn-note.text  party-confirm.text  pyproject.toml  requirements.text  tailwind.config.js
.git copy/hooks/: pre-commit
activities/: forms.py  from.py  models.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_category_remove_activity_creator_and_more.py
activities/templates/activities/: confirm_delete.html  create.html  create_category.html  details.html  index.html  update.html
cashflows/: models.py  urls.py  views.py
cashflows/migrations/: 0001_initial.py
cashflows/templates/: index.html  plan.html  purchaes.html
cashflows/templates/payment/: checkout.html  error.html
pages/: urls.py  views.py
pages/static/css/: Css_reagister.css
pages/templates/pages/: Html_login.html  Html_register.html  account.html  event.html  index.html  login.html  member.html
pydev/: settings.py  urls.py
shared/templates/shared/: icon.html  meetup_recommended_card.html  moordule_button.html
shared/templatetags/: common_components.py
src/script/: main.js
templates/base/: layout.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: signin.html  signup.html
users/templates/users/components/: email_input.html  password_input.html  signin_form.html  signup_form.html
users/templatetags/: auth_components.py
